# databank-template

./: README.md  pyproject.toml
scripts/: FormFactor_to_TotalDensity_model_training_walkthrough.ipynb  csc-lumi-template.ipynb  library.py  new_functions.py  plotQuality.ipynb  plotSimulation.ipynb  pyproject.toml  template.ipynb
scripts/new_functions/: __init__.py  data_handling.py  databank_functions.py  models.py  plotting.py
